--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__/
 __pycache__/
 .idea/
 .vscode/
+**/.DS_Store
+**/*.zip
 
 # Resume formatter test files with Korean characters
 resume-formatter/tests/format_before/
