--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,13 @@
 __pycache__/
 .idea/
 .vscode/
+**/.DS_Store
+**/*.zip
 
+# Resume formatter test files with Korean characters
+resume-formatter/tests/format_before/
+resume-formatter/tests/format_to/
+resume-formatter/tests/*.json
+
+# test assets
+test_assets/
